# sm-versions

./: .gitignore  README.md  draft-1.md  main.aux  main.bbl  main.fdb_latexmk  main.fls  main.tex  refs.bib
paper/: main.aux  main.blg  main.fdb_latexmk  main.fls  main.tex
poc/: pyproject.toml
poc/poc/: __init__.py
