[tool.poetry]
name = "poc"
version = "0.1.0"
description = ""
authors = ["José Duarte <duarte.gmj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
